[package]
name = "diskhoji"
version = "0.2.0"
edition = "2021"
description = "Diskhoji — fast disk space analyzer for Linux and macOS. One tiny binary, parallel scanner, cushion treemap + heatmap dashboard."
license = "MIT"
repository = "https://github.com/singhpratech/diskhoji"
homepage = "https://diskhoji.org"
keywords = ["disk", "treemap", "heatmap", "disk-usage", "analyzer"]
categories = ["filesystem", "command-line-utilities", "visualization"]

[dependencies]
tiny_http = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rayon = "1.10"
libc = "0.2"
eframe = { version = "0.29", default-features = false, features = ["glow", "default_fonts", "wayland", "x11"] }
image = { version = "0.25", default-features = false, features = ["png"] }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"
