[package]
name = "diskhoji"
version = "0.2.6"
edition = "2021"
authors = ["Prateek Singh <singhpratech@users.noreply.github.com>"]
description = "Diskhoji — fast disk space analyzer for Linux, macOS, and Windows. One tiny binary, parallel scanner, cushion treemap + heatmap dashboard."
license = "MIT"
repository = "https://github.com/singhpratech/diskhoji"
homepage = "https://diskhoji.org"
keywords = ["disk", "treemap", "heatmap", "disk-usage", "analyzer"]
categories = ["filesystem", "command-line-utilities", "visualization"]

[dependencies]
tiny_http = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rayon = "1.10"
image = { version = "0.25", default-features = false, features = ["png"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"
eframe = { version = "0.29", default-features = false, features = ["glow", "default_fonts", "wayland", "x11"] }

# wgpu renderer on Windows: DirectX 12 under the hood, no OpenGL driver dependency
[target.'cfg(windows)'.dependencies]
eframe = { version = "0.29", default-features = false, features = ["wgpu", "default_fonts"] }
windows-sys = { version = "0.59", features = ["Win32_Storage_FileSystem", "Win32_Foundation"] }

# Embeds the app icon + version metadata into diskhoji.exe (see build.rs). Only
# pulled when the target is Windows; the build script is cfg'd off elsewhere.
[target.'cfg(windows)'.build-dependencies]
winresource = "0.1"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"
